--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ Python 3.8+
 python-telegram-bot (версия 13.4.1+)
 requests (версия 2.26.0+)
 beautifulsoup4 (версия 4.9.3+)
+
+aiogram~=2.25.1
+requests~=2.28.2
+beautifulsoup4~=4.12.0
